<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.codeandmagic.android.MainActivity.RobotoFragment">

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="light"
        android:text="@string/roboto_light"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="bold"
        android:text="@string/roboto_bold"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_bold_from_code"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="condensed"
        android:text="@string/roboto_condensed"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="condensedBold"
        android:text="@string/roboto_condensed_light"/>

    <org.codeandmagic.android.TypefaceTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="condensedBold"
        android:text="@string/roboto_condensed_bold"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="regular"
        android:text="@string/sourcesans_regular"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="lightItalic"
        android:text="@string/sourcesans_light_italic"/>

    <org.codeandmagic.android.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="semiBoldItalic"
        android:text="@string/sourcesans_semi_bold_italic"/>

    <org.codeandmagic.android.TypefaceButton
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="black"
        android:text="@string/switch_theme"/>

</LinearLayout>
